--- a/index.html
+++ b/index.html
@@ -23,22 +23,21 @@
             </span>
         </button>
 
-        <nav class="nav nav-mobile">
-            <a href="#about us">about us</a>
-            <a href="#plan">plan</a>
-            <a href="#contact">contact</a>
+        <nav class="nav nav-mobile ">
+            <a class="nav__link" href="#about us">about us</a>
+            <a class="nav__link" href="#plan">plan</a>
+            <a class="nav__link" href="#contact">contact</a>
         </nav>
         <nav class="nav nav-desktop">
-            <a href="#about us">about us</a>
-            <a href="#plan">plan</a>
-            <a href="#contact">contact</a>
+            <a class="nav__link" href="#about us">about us</a>
+            <a class="nav__link" href="#plan">plan</a>
+            <a class="nav__link" href="#contact">contact</a>
         </nav>
 
         <div class="header__text">
             <h1 class="company-name">just like us</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste, natus. Soluta natus dolores est, officia
-                porro incidunt, quidem dolor non consequuntur ullam minima? Culpa temporibus omnis quas autem vel
-                pariatur.
+                porro incidunt.
             </p>
         </div>
 
@@ -48,7 +47,7 @@
 
         <a href="#cards">
             <div class="header__arrow">
-                <img src="./img/icons/arrow-down.svg" alt="">
+                <img class="header__arrow-icon" src="./img/icons/arrow-down.svg" alt="">
             </div>
         </a>
 
