--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <span class="hamburger-inner"></span>
             </span>
         </button>
-
         <nav class="nav nav-mobile ">
             <a class="nav__link" href="#about us">about us</a>
             <a class="nav__link" href="#plan">plan</a>
@@ -33,31 +32,50 @@
             <a class="nav__link" href="#plan">plan</a>
             <a class="nav__link" href="#contact">contact</a>
         </nav>
-
         <div class="header__text">
             <h1 class="company-name">just like us</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste, natus. Soluta natus dolores est, officia
-                porro incidunt.
+            <p>Behavior Training allows a dog to learn how to respond to any given context or situation, without the
+                need for commands, or for the owner to even be present.
             </p>
         </div>
-
         <div class="header__img">
             <div class="header__shadow"></div>
         </div>
-
         <a href="#cards">
             <div class="header__arrow">
                 <img class="header__arrow-icon" src="./img/icons/arrow-down.svg" alt="">
             </div>
         </a>
-
         <img class="header__bg-icon-one" src="./img/icons/hexagon.svg" alt="">
         <img class="header__bg-icon-two" src="./img/icons/hexagon.svg" alt="">
-
-
-
-
     </header>
+
+    <main class="main">
+
+        <section class="cards" id="cards">
+            <div class="wrapper">
+                <div class="cards__box">
+                    <div class="cards__card cards__card--one">
+                        <img src="./img/icons/sun.svg" alt="">
+                        <h3>sun</h3>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="cards__card cards__card--two">
+                        <img src="./img/icons/star.svg" alt="">
+                        <h3>star</h3>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="cards__card cards__card--three">
+                        <img src="./img/icons/gift.svg" alt="">
+                        <h3>gift</h3>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+
+    </main>
 
 
     <footer class="footer">
