--- a/index.html
+++ b/index.html
@@ -74,6 +74,67 @@
             </div>
             </div>
         </section>
+        <div class="wrapper">
+            <section class="info" id="methodology">
+                <div class="info__title">
+                    <h2 class="section-title">our <span>methodology</span></h2>
+                </div>
+                <div class="info__boxes">
+                    <div class="info__box">
+                        <img src="img/1.jpg" alt="two dogs looking up" class="info__box-img">
+                        <h3 class="info__box-title"> Pack Dynamic Training</h3>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum,
+                            dolor sit amet consectetur adipisicing elit. Voluptatum temporibus quisquam totam incidunt?
+                            Quaerat officia quisquam labore deserunt nam accusantium quam minima nesciunt atque magni
+                            beatae, sed, dolores doloremque asperiores.</p>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum,
+                            dolor sit amet consectetur adipisicing elit. Voluptatum temporibus quisquam totam incidunt?
+                            Quaerat officia quisquam labore deserunt nam accusantium quam minima nesciunt atque magni
+                            beatae, sed, dolores doloremque asperiores.</p>
+                        <a href="#" class="info__box-link">read more...</a>
+                    </div>
+                    <div class="info__box">
+                        <img src="img/2.jpg" alt="dog smelling a banana" class="info__box-img">
+                        <h3 class="info__box-title">No Anger. No Intimidation.</h3>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum,
+                            dolor sit amet consectetur adipisicing elit. Voluptatum temporibus quisquam totam incidunt?
+                            Quaerat officia quisquam labore deserunt nam accusantium quam minima nesciunt atque magni
+                            beatae, sed, dolores doloremque asperiores.</p>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum,
+                            dolor sit amet consectetur adipisicing elit. Voluptatum temporibus quisquam totam incidunt?
+                            Quaerat officia quisquam labore deserunt nam accusantium quam minima nesciunt atque magni
+                            beatae, sed, dolores doloremque asperiores.</p>
+                        <a href="#" class="info__box-link">read more...</a>
+                    </div>
+                    <div class="info__box">
+                        <img src="img/3.jpg" alt="two dogs running" class="info__box-img">
+                        <h3 class="info__box-title"> Natural Behavior Training</h3>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum,
+                            dolor sit amet consectetur adipisicing elit. Voluptatum temporibus quisquam totam incidunt?
+                            Quaerat officia quisquam labore deserunt nam accusantium quam minima nesciunt atque magni
+                            beatae, sed, dolores doloremque asperiores.</p>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum,
+                            dolor sit amet consectetur adipisicing elit. Voluptatum temporibus quisquam totam incidunt?
+                            Quaerat officia quisquam labore deserunt nam accusantium quam minima nesciunt atque magni
+                            beatae, sed, dolores doloremque asperiores.</p>
+                        <a href="#" class="info__box-link">read more...</a>
+                    </div>
+                </div>
+                <img src="img/icons/hexagon.svg" alt="" class="info__bg-icon info__bg-icon--one">
+                <img src="img/icons/hexagon.svg" alt="" class="info__bg-icon info__bg-icon--two">
+                <img src="img/icons/hexagon.svg" alt="" class="info__bg-icon info__bg-icon--three">
+                <img src="img/icons/hexagon.svg" alt="" class="info__bg-icon info__bg-icon--four">
+
+
+
+
+
+
+
+
+
+            </section>
+        </div>
 
     </main>
 
