plan section added

--- a/index.html
+++ b/index.html
@@ -125,19 +125,77 @@
                 <img src="img/icons/hexagon.svg" alt="" class="info__bg-icon info__bg-icon--three">
                 <img src="img/icons/hexagon.svg" alt="" class="info__bg-icon info__bg-icon--four">
 
-
-
-
-
-
-
-
-
             </section>
         </div>
 
-    </main>
+        <section class="plans" id="plan">
+            <div class="wrapper">
+                <h2 class="section-title">choose <span>your path</span></h2>
+                <div class="plans__box">
 
+                    <img src="img/icons/star.svg" alt="" class="plans__item plans__item-icon">
+
+                    <div class="plans__item plans__item-name">
+                        <h3>basics</h3>
+                    </div>
+                    <div class="plans__item plans__item-price">
+                        <p>price</p>
+                        <p>1.000$</p>
+                    </div>
+                    <div class="plans__item plans__item-terms">
+                        <p>crevrvrt</p>
+                        <p>ferfrefeferfrf</p>
+                    </div>
+                    <div class="plans__item plans__item-results">
+                        <p>frrfrt</p>
+                        <p>ferrtgtrvrvtvtr</p>
+                    </div>
+                </div>
+                <div class="plans__box">
+
+                    <img src="img/icons/sun.svg" alt="" class="plans__item plans__item-icon">
+
+                    <div class="plans__item plans__item-name">
+                        <h3>full</h3>
+                    </div>
+                    <div class="plans__item plans__item-price">
+                        <p>price</p>
+                        <p>3.000$</p>
+                    </div>
+                    <div class="plans__item plans__item-terms">
+                        <p>crevrvrt</p>
+                        <p>ferfrefeferfrf</p>
+                    </div>
+                    <div class="plans__item plans__item-results">
+                        <p>frrfrt</p>
+                        <p>ferrtgtrvrvtvtr</p>
+                    </div>
+                </div>
+                <div class="plans__box">
+
+                    <img src="img/icons/gift.svg" alt="" class="plans__item plans__item-icon">
+
+                    <div class="plans__item plans__item-name">
+                        <h3>modified</h3>
+                    </div>
+                    <div class="plans__item plans__item-price">
+                        <p>price</p>
+                        <p>3.000$</p>
+                    </div>
+                    <div class="plans__item plans__item-terms">
+                        <p>crevrvrt</p>
+                        <p>ferfrefeferfrf</p>
+                    </div>
+                    <div class="plans__item plans__item-results">
+                        <p>frrfrt</p>
+                        <p>ferrtgtrvrvtvtr</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
 
     <footer class="footer">
         <p class="footer__bottom-text">&copy; <span class="footer__year"></span> just like us</p>
