newsletter/contact/images added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
 
     <main class="main">
 
+        <section class="gallery">
+            <img src="./img/gallery/1 sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/2.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/3.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery//4.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/5.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/6.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/7.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/8.jpg" class="gallery__item" alt="doggo">
+        </section>
+
         <section class="cards" id="cards">
             <div class="wrapper">
                 <div class="cards__box">
@@ -74,6 +85,7 @@
             </div>
             </div>
         </section>
+
         <div class="wrapper">
             <section class="info" id="methodology">
                 <div class="info__title">
@@ -128,6 +140,17 @@
             </section>
         </div>
 
+        <section class="gallery">
+            <img src="./img/gallery/dark-yellow sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/green sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/light-light pink sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/white sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/light-red sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/peach sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/yellow sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/light-pink sm.jpg" class="gallery__item" alt="doggo">
+        </section>
+
         <section class="plans" id="plan">
             <div class="wrapper">
                 <h2 class="section-title">choose <span>your path</span></h2>
@@ -136,19 +159,19 @@
                     <img src="img/icons/star.svg" alt="" class="plans__item plans__item-icon">
 
                     <div class="plans__item plans__item-name">
-                        <h3>basics</h3>
+                        <h3>Manners Workshop</h3>
                     </div>
                     <div class="plans__item plans__item-price">
-                        <p>price</p>
+                        <p class="p-bold">Price</p>
                         <p>1.000$</p>
                     </div>
                     <div class="plans__item plans__item-terms">
-                        <p>crevrvrt</p>
-                        <p>ferfrefeferfrf</p>
+                        <p class="p-bold">Lorem, ipsum dolor.</p>
+                        <p>Lorem ipsum dolor sit.</p>
                     </div>
                     <div class="plans__item plans__item-results">
-                        <p>frrfrt</p>
-                        <p>ferrtgtrvrvtvtr</p>
+                        <p class="p-bold">Lorem, ipsum dolor.</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
                 <div class="plans__box">
@@ -156,19 +179,19 @@
                     <img src="img/icons/sun.svg" alt="" class="plans__item plans__item-icon">
 
                     <div class="plans__item plans__item-name">
-                        <h3>full</h3>
+                        <h3>Behavior Training</h3>
                     </div>
                     <div class="plans__item plans__item-price">
-                        <p>price</p>
+                        <p class="p-bold">Price</p>
                         <p>3.000$</p>
                     </div>
                     <div class="plans__item plans__item-terms">
-                        <p>crevrvrt</p>
-                        <p>ferfrefeferfrf</p>
+                        <p class="p-bold">Stage 1</p>
+                        <p> In-Patient Behavioral Rehab & Training Program</p>
                     </div>
                     <div class="plans__item plans__item-results">
-                        <p>frrfrt</p>
-                        <p>ferrtgtrvrvtvtr</p>
+                        <p class="p-bold">Stage 2</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
                 <div class="plans__box">
@@ -176,23 +199,67 @@
                     <img src="img/icons/gift.svg" alt="" class="plans__item plans__item-icon">
 
                     <div class="plans__item plans__item-name">
-                        <h3>modified</h3>
+                        <h3>Pack Cohesion Therapy Program</h3>
                     </div>
                     <div class="plans__item plans__item-price">
-                        <p>price</p>
+                        <p class="p-bold">Price</p>
                         <p>3.000$</p>
                     </div>
                     <div class="plans__item plans__item-terms">
-                        <p>crevrvrt</p>
-                        <p>ferfrefeferfrf</p>
+                        <p class="p-bold">Lorem, ipsum dolor.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                     <div class="plans__item plans__item-results">
-                        <p>frrfrt</p>
-                        <p>ferrtgtrvrvtvtr</p>
+                        <p class="p-bold">Lorem ipsum dolor sit.
+                        </p>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
+        </section>
 
+        <section class="newsletter">
+            <div class="wrapper newsletter__wrapper">
+                <div class="newsletter__text">
+                    <p>Sign up for newsletter...</p>
+                </div>
+                <div class="newsletter__form">
+                    <input class="newsletter__form__input" type="text">
+                    <button class="newsletter__form__button">subscribe</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="gallery">
+            <img src="./img/gallery/dark-pink sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery//blue sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery//light-white sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery//light-yellow sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery//grey sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/red-sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/pink sm.jpg" class="gallery__item" alt="doggo">
+            <img src="./img/gallery/orange sm.jpg" class="gallery__item" alt="doggo">
+        </section>
+
+        <section class="contact" id="contact">
+            <div class="wrapper">
+                <h2 class="section-title">contact <span>us</span></h2>
+                <form class="contact__form">
+                    <div class="contact__form-box">
+                        <label for="name">your name:</label>
+                        <input type="email" id="name">
+                    </div>
+                    <div class="contact__form-box">
+                        <label for="email">your e-mail:</label>
+                        <input type="email" id="email">
+                    </div>
+                    <div class="contact__form-box">
+                        <label for="msg">message:</label>
+                        <textarea name="msg" id="msg" cols="30" rows="10"></textarea>
+                    </div>
+                    <button type="submit" class="contact__form-btn">Send</button>
+                </form>
+            </div>
         </section>
 
     </main>
