--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             </span>
         </button>
         <nav class="nav nav-mobile ">
-            <a class="nav__link" href="#about us">about us</a>
+            <a class="nav__link" href="#methodology">about us</a>
             <a class="nav__link" href="#plan">plan</a>
             <a class="nav__link" href="#contact">contact</a>
         </nav>
         <nav class="nav nav-desktop">
-            <a class="nav__link" href="#about us">about us</a>
+            <a class="nav__link" href="#methodology">about us</a>
             <a class="nav__link" href="#plan">plan</a>
             <a class="nav__link" href="#contact">contact</a>
         </nav>
